--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,14 @@
   --secondary-color: #1c1e21;
   --white-color: #fcf5eb;
   --light-gray-color: #eeeeee;
-  --gap: 3rem;
+  --gap: 4rem;
 }
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: Helvetica, sans-serif;
 }
 
 /* Config Default */
@@ -22,7 +23,11 @@ html {
 
 body {
   line-height: 1.5;
-  font-size: 2rem;
+  font-size: 1.6rem;
+}
+
+img {
+  width: 30rem;
 }
 
 /* Utilits */
@@ -30,63 +35,72 @@ body {
   background-color: var(--white-color);
 }
 
+.main-content {
+  max-width: 120rem;
+  margin: 0 auto;
+}
+
 .height-bg {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 6rem;
-  text-transform: uppercase;
+.btn-download {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+  cursor: pointer;
+  background-color: var(--primary-color);
+  border: 0.1rem solid #1c1e21;
+  border-radius: 10rem;
+
+  line-height: 1.6rem;
+  font-size: 1.6rem;
+  padding: 1.6rem 2.8rem;
+
+  transition: all 0.3s ease-in-out;
 }
 
-h2 {
-  font-size: 6rem;
-  margin-bottom: 5rem;
-  text-transform: uppercase;
-  line-height: 1.2;
-}
-
-h3 {
-  font-size: 5rem;
-}
-
-h4 {
-  font-size: 4.5rem;
-}
-
-h5 {
-  font-size: 4rem;
-}
-
-h6 {
-  font-size: 3.5rem;
-}
-
-p {
-  margin-bottom: 3rem;
+.btn-download:hover {
+  background-color: var(--secondary-color);
+  color: var(--white-color);
 }
 
 a {
   text-decoration: none;
 }
 
+.menu-spacing {
+  height: 11rem;
+}
+
 /* end config default */
 
 /* nav container */
+.menu {
+  width: 100%;
+  background-color: var(--white-color);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
 .nav-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 
+  color: var(--secondary-color);
   border-bottom: 0.2rem solid var(--light-gray-color);
   width: 100%;
+  min-height: 8rem;
 
   padding: 0 var(--gap);
-  padding-top: 0;
-  padding-bottom: 0;
 }
 
 .nav-logo img {
+  width: 13rem;
   cursor: pointer;
 }
 
@@ -98,16 +112,17 @@ a {
 .nav-links ul li a {
   position: relative;
   display: block;
-  padding: 2.5rem;
+
+  color: inherit;
+  padding: 0 2rem;
+
   font-size: 1.6rem;
-  font-family: Helvetica, sans-serif;
-  color: var(--secondary-color);
 }
 
 .nav-links ul li a::after {
   content: "";
   position: absolute;
-  bottom: 2.4rem;
+  bottom: 0rem;
   left: 20%;
   width: 0%;
   height: 0.2rem;
@@ -119,26 +134,42 @@ a {
   width: 60%;
 }
 
-.nav-button button {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-
-  cursor: pointer;
-  background-color: var(--primary-color);
-  border: 1px solid #1c1e21;
-  line-height: 16px;
-  padding: 1.6rem 2.8rem;
-  border-radius: 10rem;
-  font-size: 1.6rem;
-  transition: all 0.3s ease-in-out;
-}
-
 .nav-button button span {
-  margin-right: 10px;
+  margin-right: 1rem;
 }
 
-.nav-button button:hover {
-  background-color: var(--secondary-color);
+/* Conteudo principal */
+.intro-bg {
+  width: 145rem;
+  margin: 0 auto;
+  border-radius: 2.5rem;
+
+  background-image: url(../images-whatsapp/intro-bg.png);
+  background-size: cover;
+}
+
+.intro-content {
+  display: grid;
+  height: 100vh;
+  padding: 0 6rem;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: var(--gap);
+}
+
+.intro-text-content {
+  width: 40rem;
+  border: 0.1rem solid #000;
+}
+
+.intro-text-content h1 {
+  font-size: 8rem;
+  line-height: 1;
   color: var(--white-color);
+  font-weight: 500;
+  letter-spacing: -0.32rem;
+}
+
+.intro-images {
+  border: 1px solid #000;
 }
